--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^5.0.4",
     "d3": "^7.9.0",
+    "firebase": "^12.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "vite": "^7.1.11"
