ver 0.3.3(update JSON)

--- a/source/projectData.json
+++ b/source/projectData.json
@@ -6,28 +6,28 @@
   "children": [
     {
       "name": "Idea sketch",
-      "date": "Nov 1st 2025",
-      "time": "",
+      "date": "Nov 1 2025",
+      "time": "18:30",
       "value": "Sketching what I want to build and how",
       "children": [
         {
           "name": "Managing my projects?",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "There are a lot of projects on going, want to manage the project well as much as I can",
           "children": []
         },
         {
           "name": "Using React",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "React is good for generating multiple datas with a certain shape ",
           "children": [
             {
               "name": "Connect with JSON",
               "date": "",
               "time": "",
-              "value": "",
+              "value": "Dealing with the project data",
               "children": []
             },
             {
@@ -43,15 +43,15 @@
     },
     {
       "name": "Research and apply",
-      "date": "",
-      "time": "",
-      "value": "",
+      "date": "Nov 3 2025",
+      "time": "14:00",
+      "value": "Need more research how can I build this on the right purpose",
       "children": [
         {
           "name": "D3 library understand",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "Found D3 library. Need to learn how it works",
           "children": [
             {
               "name": "Build sample Tree shape",
@@ -66,7 +66,7 @@
           "name": "Making a sample data",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "For debbuging purpose",
           "children": [
             {
               "name": "Set the structure and contents",
@@ -81,9 +81,9 @@
     },
     {
       "name": "Build Tree shape",
-      "date": "",
-      "time": "",
-      "value": "",
+      "date": "Nov 4 2025",
+      "time": "12:10",
+      "value": "Try out D3 and start to make a structure",
       "children": [
         {
           "name": "Node placing",
@@ -103,9 +103,9 @@
     },
     {
       "name": "More features",
-      "date": "",
-      "time": "",
-      "value": "",
+      "date": "Nov 8 2025",
+      "time": "18:30",
+      "value": "Adding more features for better experience",
       "children": [
         {
           "name": "Side bar",
@@ -117,7 +117,7 @@
               "name": "Hierarchy navigation",
               "date": "",
               "time": "",
-              "value": "",
+              "value": "Side bar click -> move to certain node.\nWorth it to try.",
               "children": [
                 {
                   "name": "Move to selected one",
@@ -202,13 +202,13 @@
       "name": "Optional",
       "date": "",
       "time": "",
-      "value": "",
+      "value": "Some optional features I could add more in the future",
       "children": [
         {
           "name": "D3: Radial Tree shape",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "Found a cool shape of Tree graph call Radial",
           "children": [
             {
               "name": "Or try other D3 Graph shapes",
@@ -223,14 +223,14 @@
           "name": "Firebase JSON fetch",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "Want to manage the data with the server, not as a local.\nIt's a big limitation",
           "children": []
         },
         {
           "name": "Node adjust and realign",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "Currently, Can't adjust the order of node or move the position with drag&drop",
           "children": []
         }
       ]
@@ -245,7 +245,7 @@
           "name": "Github code upload",
           "date": "",
           "time": "",
-          "value": "",
+          "value": "Make sure not to upload important infos, such as API key",
           "children": [
             {
               "name": "Commit final code",
@@ -292,6 +292,93 @@
                 },
                 {
                   "name": "D3 tree graph",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": []
+                }
+              ]
+            },
+            {
+              "name": "Features",
+              "date": "",
+              "time": "",
+              "value": "",
+              "children": [
+                {
+                  "name": "Node adding/removing",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": []
+                },
+                {
+                  "name": "Node info changing",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": []
+                },
+                {
+                  "name": "Pan/Drag system",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": []
+                },
+                {
+                  "name": "Side bar",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": [
+                    {
+                      "name": "Width adjust",
+                      "date": "",
+                      "time": "",
+                      "value": "",
+                      "children": []
+                    },
+                    {
+                      "name": "Buttons",
+                      "date": "",
+                      "time": "",
+                      "value": "",
+                      "children": []
+                    },
+                    {
+                      "name": "Hierarchy move",
+                      "date": "",
+                      "time": "",
+                      "value": "",
+                      "children": []
+                    }
+                  ]
+                }
+              ]
+            },
+            {
+              "name": "How to use with your own JSON",
+              "date": "",
+              "time": "",
+              "value": "",
+              "children": [
+                {
+                  "name": "Saving on localstorage",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": []
+                },
+                {
+                  "name": "Export Json",
+                  "date": "",
+                  "time": "",
+                  "value": "",
+                  "children": []
+                },
+                {
+                  "name": "Apply in to your project",
                   "date": "",
                   "time": "",
                   "value": "",
